--- a/packages/docs-app/src/index.html
+++ b/packages/docs-app/src/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="">
 
   <link rel="stylesheet" href="docs-app.css">
-  <link rel="stylesheet" href="assets/lato.css">
+  <link rel="stylesheet" href="assets/latolatin.css">
   <link rel="icon" href="assets/favicon.png" sizes="32x32" type="image/png" />
 
   <script type="text/javascript">
